--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@angular/forms": "^18.0.0",
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
-    "@angular/router": "^18.0.0",
+    "@angular/router": "^18.1.3",
     "@capacitor/android": "^6.1.1",
     "@capacitor/app": "6.0.0",
     "@capacitor/core": "6.1.0",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "^6.0.1",
+    "@capacitor/splash-screen": "^6.0.1",
     "@capacitor/status-bar": "6.0.0",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/device-motion": "^5.36.0",
